--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,9 @@
+v1.0.0.alpha.2
+  Bug fix: site in breadboard wasn't getting parsed
+
+v1.0.0.alpha.1
+  Complete rewrite. You now configure Breadboard through a Ruby DSL.
+
 v0.2.0
   Rails 3 compatible! thx Dorren Chen!
 
