--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,6 @@
+v1.0.0.beta.2
+  Fixed a bug caused by Rails reloading. Note: never use class name constant as a hash key. Rails reloading will screw you.
+
 v1.0.0.beta.1
   Cleaning up comments; ready for public consumption
 
