--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,6 @@
+v1.0.0
+  No change since beta 2; after using beta 2 in several production apps and not running into any more bugs, i've decided it's good for 1.0.0 GA.
+
 v1.0.0.beta.2
   Fixed a bug caused by Rails reloading. Note: never use class name constant as a hash key. Rails reloading will screw you.
 
