--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,5 @@
+v1.0.2
+  set user, password parameters with block instead of hash.
 v1.0.1
   configure with hash, so you can set user, password parameters.
 v1.0.0
